--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -71,10 +71,12 @@
 					<div class="dish-card__text-container">
 						<a href="#" class="dish-card__title">
 							<h6 class="dish-card__title-chi">凉拌肉片 凉拌开胃菜加酱汁</h6>
-							<h6 class="dish-card__title-rus">Ассорти из холодных мясных закусок
+							<h6 class="dish-card__title-rus"> Ассорти из холодных мясных закусок
 								с соусом</h6>
 						</a>
 						<div class="dish-card__weight">320 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old">1920 ₽ </div>
@@ -83,14 +85,14 @@
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus"></button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus"></button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -109,6 +111,8 @@
 								в остром соусе</h6>
 						</a>
 						<div class="dish-card__weight">400 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old"></div>
@@ -123,8 +127,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -139,9 +143,11 @@
 						<a href="#" class="dish-card__title">
 							<h6 class="dish-card__title-chi">凉拌肉片 凉拌开胃菜加酱汁</h6>
 							<h6 class="dish-card__title-rus">Ассорти из холодных
-								мясных закусок с соусом</h6>
+								мясных закусок с соусом карбонара и морковью </h6>
 						</a>
 						<div class="dish-card__weight">380 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">880 ₽</div>
 							<div class="dish-card__price-old"></div>
@@ -156,8 +162,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -175,6 +181,8 @@
 								под соусом</h6>
 						</a>
 						<div class="dish-card__weight">500 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
@@ -189,8 +197,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -208,6 +216,8 @@
 								бараньи ребра</h6>
 						</a>
 						<div class="dish-card__weight">500 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">1680 ₽ </div>
 							<div class="dish-card__price-old">2220 ₽</div>
@@ -222,8 +232,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -241,6 +251,8 @@
 								с луком и зирой</h6>
 						</a>
 						<div class="dish-card__weight">410 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">1280 ₽ </div>
 							<div class="dish-card__price-old"></div>
@@ -255,8 +267,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -274,6 +286,8 @@
 								на пару</h6>
 						</a>
 						<div class="dish-card__weight">720 -900 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">3280 ₽</div>
 							<div class="dish-card__price-old"></div>
@@ -288,8 +302,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -306,6 +320,8 @@
 							<h6 class="dish-card__title-rus">Тюрбо</h6>
 						</a>
 						<div class="dish-card__weight">400 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old"></div>
@@ -320,8 +336,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -338,6 +354,8 @@
 							<h6 class="dish-card__title-rus">Суп Том Ям</h6>
 						</a>
 						<div class="dish-card__weight">700 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">880 ₽</div>
 							<div class="dish-card__price-old"></div>
@@ -352,8 +370,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -371,6 +389,8 @@
 								с начинкой из бобов</h6>
 						</a>
 						<div class="dish-card__weight">500 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
@@ -385,8 +405,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -405,6 +425,8 @@
 								и острым соусом</h6>
 						</a>
 						<div class="dish-card__weight">500 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
@@ -419,8 +441,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 				<li class="dish-card">
 					<a href="#" class="dish-card__img-link">
@@ -438,6 +460,8 @@
 								в сладком соусе</h6>
 						</a>
 						<div class="dish-card__weight">410 гр.</div>
+					</div>
+					<div class="dish-card__price-and-purchase-container">
 						<div class="dish-card__price-block">
 							<div class="dish-card__price-current">1280 ₽ </div>
 							<div class="dish-card__price-old"></div>
@@ -452,8 +476,8 @@
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
+						</form>
 					</div>
-					</form>
 				</li>
 			</ul>
 			<a href="#" class="section-menu__see-all-btn">
