--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -83,9 +83,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
-								<input type="number" class="dish-card__counter" value="0" >
-								<button class="dish-card__plus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -119,9 +123,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -154,9 +162,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -189,9 +201,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -224,9 +240,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -259,9 +279,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -294,9 +318,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -328,9 +356,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -362,9 +394,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -397,9 +433,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -433,9 +473,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
@@ -468,9 +512,13 @@
 						</div>
 						<form action="" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
-								<button class="dish-card__minus"></button>
+								<button class="dish-card__minus">
+									<div class="dish-card__minus-icon"></div>
+								</button>
 								<input type="number" class="dish-card__counter" value="0">
-								<button class="dish-card__plus"> </button>
+								<button class="dish-card__plus">
+									<div class="dish-card__plus-icon"></div>
+								</button>
 							</div>
 							<button class="dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
