--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
 <main>
 	@@include('blocks/features.html')
 	@@include('blocks/menu.html')
+	@@include('blocks/aboutUs.html')
 </main>
 
 <!-- <picture>
