--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -2,9 +2,9 @@
 	<div class="container">
 		<div class="section-menu__inner">
 			<div class="section-menu__title-container">
-				<div class="section-menu__title">
-					<h2 class="section-menu__title-rus">НАШЕ МЕНЮ</h2>
-					<h2 class="section-menu__title-chi">我们的菜单</h2>
+				<div class="section-menu__title title">
+					<h2 class="section-menu__title-rus title-rus">НАШЕ МЕНЮ</h2>
+					<h2 class="section-menu__title-chi title-chi">我们的菜单</h2>
 				</div>
 			</div>
 			<div class="menu-categories">
