--- a/src/html/blocks/aboutUs.html
+++ b/src/html/blocks/aboutUs.html
@@ -21,9 +21,10 @@
 				</div>
 				<p class="aboutUs__chi-text">中国... 一个讲究礼节的国度。几千年来，中华民族的贸易中，诚实、正直和公 平是最重要的。"古代中国 "一直稳定地遵循这些原则，赢得了人 们的信任。在制作菜肴时，我们只使用最优质的 原料，我们的厨师是工艺大师。主要目标是让顾 客满意。保持合理的价格，我们希望让每个人都 有机会接触到中国的文化，发现新的美食领 域！"！</p>
 			</div>
-			
+
 			<div class="aboutUs__slider-container">
-				@@include('aboutUs-slider.html')
+				@@include('aboutUs-slider-inside.html')
+				@@include('aboutUs-slider-outside.html')
 				<div class="aboutUs__switcher-slider-block">
 					<button class="aboutUs__inside-btn">внутри</button>
 					<button class="aboutUs__outside-btn">снаружи</button>
