--- a/src/html/blocks/aboutUs.html
+++ b/src/html/blocks/aboutUs.html
@@ -11,7 +11,8 @@
 
 			<div class="aboutUs__descr">
 				<div class="aboutUs__rus-container">
-					<p class="aboutUs__rus-text-1">Китай... Край вежливости и этикета. Уже много тысчелетий китайская
+					<p class="aboutUs__rus-text-1">Китай... Край вежливости и этикета. <br>Уже много тысчелетий
+						китайская
 						нация ведет торговлю, где честность, добропорядочность и справедливость важнее всего.</p>
 					<p class="aboutUs__rus-text-2">"Древний Китай" неклонно следует этим принципам, завоевывая доверие
 						людей. При создани блюд, мы используем ингредиенты только лучшего качества, наши повара -
@@ -19,17 +20,20 @@
 						хотим дать возможность каждому прикоснуться к культуре Китая и открыть для себя новые
 						гастрономические горизонты!</p>
 				</div>
-				<p class="aboutUs__chi-text">中国... 一个讲究礼节的国度。几千年来，中华民族的贸易中，诚实、正直和公 平是最重要的。"古代中国 "一直稳定地遵循这些原则，赢得了人 们的信任。在制作菜肴时，我们只使用最优质的 原料，我们的厨师是工艺大师。主要目标是让顾 客满意。保持合理的价格，我们希望让每个人都 有机会接触到中国的文化，发现新的美食领 域！"！</p>
+				<p class="aboutUs__chi-text">中国... 一个讲究礼节的国度。<br> 几千年来，中华民族的贸易中，诚实、正直和公 平是最重要的。<br>"古代中国
+					"一直稳定地遵循这些原则，赢得了人 们的信任。在制作菜肴时，我们只使用最优质的 原料，我们的厨师是工艺大师。主要目标是让顾 客满意。保持合理的价格，我们希望让每个人都
+					有机会接触到中国的文化，发现新的美食领 域！"！</p>
 			</div>
 
 			<div class="aboutUs__slider-container">
 				@@include('aboutUs-slider-inside.html')
 				@@include('aboutUs-slider-outside.html')
 				<div class="aboutUs__switcher-slider-block">
-					<button class="aboutUs__inside-btn">внутри</button>
-					<button class="aboutUs__outside-btn">снаружи</button>
+					<button
+						class="aboutUs__inside-btn aboutUs__switcher-btn aboutUs__switcher-btn--active">внутри</button>
+					<button class="aboutUs__outside-btn aboutUs__switcher-btn">снаружи</button>
 				</div>
-				<a href="#" class="aboutUs__booking-link aboutUs__booking-link">
+				<a href="#" class="aboutUs__booking-link ">
 					<span class="aboutUs__booking-text-rus aboutUs__booking-text">Забронировать стол</span>
 					<div class="aboutUs__booking-separator"></div>
 					<span class="aboutUs__booking-text-chi aboutUs__booking-text">预订座位</span>
