--- a/src/html/blocks/aboutUs-slider-inside.html
+++ b/src/html/blocks/aboutUs-slider-inside.html
@@ -16,15 +16,22 @@
 
 	<div class="aboutUs__slide aboutUs__slide-3">
 		<div class="aboutUs__slider-text-block">
-			<div class="aboutUs__slider-text-main">Малый зал №1</div>
-			<div class="aboutUs__slider-text-chi">食大厅1</div>
+			<div class="aboutUs__slider-text-main">Большой зал №3</div>
+			<div class="aboutUs__slider-text-chi">大厅3</div>
 		</div>
 	</div>
 
 	<div class="aboutUs__slide aboutUs__slide-4">
 		<div class="aboutUs__slider-text-block">
-			<div class="aboutUs__slider-text-main">Малый зал №2</div>
-			<div class="aboutUs__slider-text-chi">食大厅2</div>
+			<div class="aboutUs__slider-text-main">Vip залы</div>
+			<div class="aboutUs__slider-text-chi">食厅</div>
+		</div>
+	</div>
+
+	<div class="aboutUs__slide aboutUs__slide-5">
+		<div class="aboutUs__slider-text-block">
+			<div class="aboutUs__slider-text-main">Бар</div>
+			<div class="aboutUs__slider-text-chi">大</div>
 		</div>
 	</div>
 
@@ -35,4 +42,5 @@
 	<div class="aboutUs__mini-slide aboutUs__mini-slide-2"></div>
 	<div class="aboutUs__mini-slide aboutUs__mini-slide-3"></div>
 	<div class="aboutUs__mini-slide aboutUs__mini-slide-4"></div>
+	<div class="aboutUs__mini-slide aboutUs__mini-slide-5"></div>
 </div>
