--- a/src/html/blocks/aboutUs-slider-outside.html
+++ b/src/html/blocks/aboutUs-slider-outside.html
@@ -1,5 +1,5 @@
-<div class="aboutUs__slider-outside-container">
-	<div class="aboutUs__slider-outside">
+<div class="aboutUs__slider-outside-container visually-hidden">
+	<div class="aboutUs__slider-outside ">
 
 		<div class="aboutUs__slide aboutUs__slide-1">
 			<div class="aboutUs__slider-text-block">
