--- a/src/html/blocks/aboutUs.html
+++ b/src/html/blocks/aboutUs.html
@@ -26,8 +26,10 @@
 			</div>
 
 			<div class="aboutUs__slider-container">
-				@@include('aboutUs-slider-inside.html')
-				@@include('aboutUs-slider-outside.html')
+				<div class="aboutUs__inside-outside-container">
+					@@include('aboutUs-slider-inside.html')
+					@@include('aboutUs-slider-outside.html')
+				</div>
 				<div class="aboutUs__switcher-slider-block">
 					<button
 						class="aboutUs__inside-btn aboutUs__switcher-btn aboutUs__switcher-btn--active">внутри</button>
