--- a/src/html/blocks/aboutUs-slider-outside.html
+++ b/src/html/blocks/aboutUs-slider-outside.html
@@ -1,4 +1,4 @@
-<div class="aboutUs__slider-outside-container none">
+<div class="aboutUs__slider-outside-container aboutUs-slider-hidden">
 	<div class="aboutUs__slider-outside ">
 
 		<div class="aboutUs__slide aboutUs__slide-1">
