--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
 	@@include('blocks/features.html')
 	@@include('blocks/menu.html')
 	@@include('blocks/aboutUs.html')
+	@@include('blocks/reviews.html')
 </main>
 
 <!-- <picture>
