--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
 	@@include('blocks/menu.html')
 	@@include('blocks/aboutUs.html')
 	@@include('blocks/reviews.html')
+	@@include('blocks/map.html')
 </main>
 
 <!-- <picture>
