--- a/src/html/blocks/footer/footer.html
+++ b/src/html/blocks/footer/footer.html
@@ -1,45 +1,96 @@
 <footer class="footer">
-	<div class="container footer__container">
-		<div class="footer__main-block">
-			<h3 class="footer__title">Raido.</h3>
-			<div class="footer__social-block">
-				<a href="#" class="facebook-link">
-					<div class="footer__social-icon" style="width: 30px; height: 30px;"><img
-							src="img/sprite.svg#icons--facebook" class="svg-icons--facebook-dims" alt="icons--facebook">
-					</div>
+	<div class="container">
+		<div class="footer__inner">
+			<div class="footer__main-block">
+				<a
+					href="#"
+					class="footer__logo-link"
+				>
 				</a>
-				<a href="#" class="instagram-link">
-					<div class="footer__social-icon" style="width: 30px; height: 30px;"><img
-							src="img/sprite.svg#icons--instagram" class="svg-icons--instagram-dims"
-							alt="icons--instagram">
-					</div>
-				</a>
-				<a href="#" class="twitter-link">
-					<div class="footer__social-icon" style="width: 30px; height: 30px;">
-						<img src="img/sprite.svg#icons--twitter" class="svg-icons--twitter-dims" alt="icons--twitter">
-					</div>
-				</a>
-				<a href="#" class="linkedin-link">
-					<div class="footer__social-icon" style="width: 30px; height: 30px;">
-						<img src="img/sprite.svg#icons--linkedin" class="svg-icons--linkedin-dims"
-							alt="icons--linkedin">
-					</div>
-				</a>
-			</div>
-			<nav class="footer__menu">
+
 				<ul class="footer__menu-list">
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Home</a></li>
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">About Us</a></li>
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Discover</a></li>
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Blog</a></li>
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Journals</a></li>
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Galery</a></li>
-					<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Contacts</a></li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">Меню</span><span class="footer__menu-item-chi">菜单</span>
+							</div>
+						</a>
+					</li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">НОВОСТИ</span
+								><span class="footer__menu-item-chi">新闻</span>
+							</div>
+						</a>
+					</li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">О РЕСТОРАНЕ</span
+								><span class="footer__menu-item-chi">关于该餐厅</span>
+							</div>
+						</a>
+					</li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">ВАКАНСИИ</span
+								><span class="footer__menu-item-chi">职位空缺</span>
+							</div>
+						</a>
+					</li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">ДОСТАВКА</span
+								><span class="footer__menu-item-chi">送货</span>
+							</div>
+						</a>
+					</li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">БАНКЕТЫ</span
+								><span class="footer__menu-item-chi">宴会</span>
+							</div>
+						</a>
+					</li>
+					<li class="footer__menu-item">
+						<a
+							href="#"
+							class="footer__menu-item-link"
+						>
+							<div class="footer__menu-item-text">
+								<span class="footer__menu-item-text-rus">КОНТАКТЫ</span
+								><span class="footer__menu-item-chi">联系我们</span>
+							</div>
+						</a>
+					</li>
 				</ul>
-			</nav>
-		</div>
-		<div class="footer__bottom-block">
-			<p class="footer__copyright">© 2022 All Right Reserved </p>
+				<div class="footer__contact-block">
+					
+				</div>
+			</div>
+			<div class="footer__secondary-block"></div>
 		</div>
 	</div>
 </footer>
