--- a/src/html/blocks/map.html
+++ b/src/html/blocks/map.html
@@ -17,7 +17,7 @@
 		<div class="map__switcher">
 			<div class="container">
 				<div class="map__switcher-inner">
-					<div class="map__switcher-adress map__switcher--active">Адрес ресторана</div>
+					<div class="map__switcher-adress map__switcher--active">Адрес</div>
 					<a class="map__switcher-build-route"
 						href="https://yandex.ru/maps/213/moscow/?from=mapframe&ll=37.823161%2C55.655915&mode=routes&rtext=~55.656538%2C37.823077&rtt=auto&ruri=~ymapsbm1%3A%2F%2Forg%3Foid%3D129623926357&z=16"
 						target="_blank">
