--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -16,7 +16,7 @@
 <body class="body">
 	<header class="header">
 		<div class="header__inner">
-			@@include('header-slider.html')
+			<!-- @@include('header-slider.html') -->
 			<div class="header__top">
 				<div class="header__point-info">
 					<button class="header__point-adress">
