--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,9 +35,13 @@
 
 @@include('blocks/footer/footer.html')
 
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+
+<script src="js/cornerPopup.bundle.js"></script>
+
+
 <script src="js/index.bundle.js"></script>
-
-
 
 </body>
 
