--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -73,10 +73,10 @@
 							<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 							<span class="header__phone-text">+7 954 123-85-07</span>
 						</div>
-						<a href="#" class="header__user-cab-link header__user-tools">
+						<a href="#" class="red-shine small_button header__user-cab-link header__user-tools">
 							<img src="img/sprite.svg#header--user" class="svg-header--user-dims" alt="header--user">
 						</a>
-						<a href="#" class="header__cart-link header__user-tools">
+						<a href="#" class="red-shine small_button header__cart-link header__user-tools">
 							<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 								alt="main--menu--cart">
 							<span class="header__cart-items-qauntity">2</span>
@@ -91,14 +91,14 @@
 
 				<div class="header__booking-block">
 					<div class="header__booking booking">
-						<a href="#" class="booking__link header__booking-link">
+						<a href="#" class="big_button booking__link header__booking-link">
 							<span class="header__booking-text-rus header__booking-text">Забронировать стол</span>
 							<div class="header__booking-separator"></div>
 							<span class="header__booking-text-chi header__booking-text">预订座位</span>
 						</a>
 					</div>
 					<div class="header__booking delivery">
-						<a href="#" class="delivery__link header__booking-link">
+						<a href="#" class="big_button delivery__link header__booking-link">
 							<span class="header__booking-text-rus header__booking-text">ДОСТАВКА ЕДЫ НА ДОМ</span>
 							<div class="header__booking-separator"></div>
 							<span class="header__booking-text-chi header__booking-text">食品配送</span>
