--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -13,45 +13,45 @@
 						alt="main--menu--arrow">
 				</button>
 				<ul class="menu-categories__list">
-					<li class="menu-categories__item menu-categories__item--active">
-						<a href="#" class="menu-categories__link"><span
+					<li class="red-shine menu-categories__item red-shine menu-categories__item--active">
+						<a href="#" class=" menu-categories__link"><span
 								class="menu-categories__text-rus">Новинки</span><span
 								class="menu-categories__text-chi">新项目</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Основные
 								блюда</span><span class="menu-categories__text-chi">主要膳食</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span
 								class="menu-categories__text-rus">Супы</span><span
 								class="menu-categories__text-chi">汤类</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span
 								class="menu-categories__text-rus">Салаты</span><span
 								class="menu-categories__text-chi">沙拉</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span
 								class="menu-categories__text-rus">Рыба</span><span
 								class="menu-categories__text-chi">鱼类</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span
 								class="menu-categories__text-rus">Мясо</span><span
 								class="menu-categories__text-chi">肉类</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span
 								class="menu-categories__text-rus">Десерты</span><span
 								class="menu-categories__text-chi">甜品</span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Закуски
 							</span><span class="menu-categories__text-chi">小吃 </span></a>
 					</li>
-					<li class="menu-categories__item">
+					<li class="red-shine menu-categories__item">
 						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Напитки
 							</span><span class="menu-categories__text-chi"> 饮料</span></a>
 					</li>
@@ -91,7 +91,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -131,7 +131,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -170,7 +170,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -209,7 +209,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -248,7 +248,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -287,7 +287,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -326,7 +326,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -364,7 +364,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -402,7 +402,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -441,7 +441,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -481,7 +481,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -520,7 +520,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="dish-card__add-to-cart-btn">
+							<button class="red-shine small_button dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -528,7 +528,7 @@
 					</div>
 				</li>
 			</ul>
-			<a href="#" class="section-menu__see-all-btn">
+			<a href="#" class="big_button section-menu__see-all-btn">
 				<span class="section-menu__see-all-text-chi">食品配送</span>
 				<span class="section-menu__see-all-separator"></span>
 				<span class="section-menu__see-all-text-rus">ПОСМОТРЕТЬ ВСЕ МЕНЮ</span>
