Вернул открытие pdf, должно работать корректно на сервере

--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -528,7 +528,8 @@
 					</div>
 				</li>
 			</ul>
-			<a download="" href="files/menuAncientChina.pdf" target="_blank" class="big_button section-menu__see-all-btn">
+			<!-- GhP -->
+			<a href="files/menuAncientChina.pdf" target="_blank" class="big_button section-menu__see-all-btn">
 				<span class="section-menu__see-all-text-chi">食品配送</span>
 				<span class="section-menu__see-all-separator"></span>
 				<span class="section-menu__see-all-text-rus">ПОСМОТРЕТЬ ВСЕ МЕНЮ</span>
