--- a/src/html/blocks/footer/footer.html
+++ b/src/html/blocks/footer/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="footer__inner">
 			<div class="footer__main-block">
-				<a href="#" class="footer__logo-link">
+				<a href="index.html" class="footer__logo-link">
 					<img class="footer__logo-img" src="img/logo.png" alt="logo-footer" />
 				</a>
 
@@ -16,7 +16,7 @@
 						</a>
 					</li>
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">НОВОСТИ</span><span
 									class="footer__menu-item-chi">新闻</span>
