--- a/src/html/blocks/header/header-inDeveloping.html
+++ b/src/html/blocks/header/header-inDeveloping.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Древний Китай</title>
+	<title>Страница в разработке Древний Китай</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -13,11 +13,11 @@
 	<link rel="manifest" href="img/favicon/site.webmanifest">
 </head>
 
-<body class="body">
+<body class="body in-dev-body">
 	<header class="header">
 
 		<div class="header__inner">
-			@@include('header-slider.html')
+			@@include('header-slider-inDev.html')
 			<div class="header__top">
 				<div class="header__point-info">
 					<button class="header__point-adress">
@@ -73,14 +73,7 @@
 						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 						<a href="tel: +79541238507"><span class="header__phone-text">+7 954 123-85-07</span></a>
 					</div>
-					<a href="#" class="red-shine small_button header__user-cab-link header__user-tools">
-						<img src="img/sprite.svg#header--user" class="svg-header--user-dims" alt="header--user">
-					</a>
-					<a href="#" class="red-shine small_button header__cart-link header__user-tools">
-						<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
-							alt="main--menu--cart">
-						<span class="header__cart-items-qauntity">2</span>
-					</a>
+
 				</div>
 
 			</div>
@@ -89,21 +82,15 @@
 				<img src="img/logo.png" class="logo-img" alt="header--logo">
 			</a>
 
-			<div class="header__booking-block">
+			<div class=" header__to-index">
 				<div class="header__booking booking">
 					<a href="#" class="big_button booking__link header__booking-link">
-						<span class="header__booking-text-rus header__booking-text">Забронировать стол</span>
+						<span class="header__booking-text-rus header__booking-text"> Вернуться на главную</span>
 						<div class="header__booking-separator"></div>
-						<span class="header__booking-text-chi header__booking-text">预订座位</span>
+						<span class="header__booking-text-chi header__booking-text">返回主页</span>
 					</a>
 				</div>
-				<div class="header__booking delivery">
-					<a href="#" class="big_button delivery__link header__booking-link">
-						<span class="header__booking-text-rus header__booking-text">ДОСТАВКА ЕДЫ НА ДОМ</span>
-						<div class="header__booking-separator"></div>
-						<span class="header__booking-text-chi header__booking-text">食品配送</span>
-					</a>
-				</div>
+
 			</div>
 
 		</div>
