Разметил мобильное меню

--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -15,15 +15,15 @@
 
 <body class="body">
 	<header class="header">
-
+		@@include('mobile-nav.html')
 		<div class="header__inner">
 			@@include('header-slider.html')
 			<div class="header__top">
 				<div class="header__point-info">
-					<button class="header__point-adress">
+					<a href="#" class="header__point-adress">
 						<img src="img/sprite.svg#footer--map" class="svg-footer--map-dims" alt="footer--map">
 						<span class="header__point-adress-text">ул. Верхние Поля, дв56с4, Москва</span>
-					</button>
+					</a>
 
 					<div class="header__point-work-time">
 						<img src="img/sprite.svg#header--time" class="svg-header--time-dims" alt="header--time">
@@ -79,7 +79,7 @@
 					<a href="#" class="red-shine small_button header__cart-link header__user-tools">
 						<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 							alt="main--menu--cart">
-						<span class="header__cart-items-qauntity">2</span>
+						<span class="header__cart-items-qauntity">0</span>
 					</a>
 				</div>
 
