Слайдер меню сделал, остались ссылки на вРазработке

--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -8,12 +8,18 @@
 				</div>
 			</div>
 			<div class="menu-categories">
-				<button class="menu-categories__menu-arrow-btn">
-					<img src="img/sprite.svg#main--menu--arrow" class="svg-main--menu--arrow-dims"
-						alt="main--menu--arrow">
-				</button>
+
+
 				<ul class="menu-categories__list">
-					<li class="red-shine menu-categories__item red-shine menu-categories__item--active">
+					<li class="red-shine menu-categories__item">
+						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Закуски
+							</span><span class="menu-categories__text-chi">小吃 </span></a>
+					</li>
+					<li class="red-shine menu-categories__item">
+						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Напитки
+							</span><span class="menu-categories__text-chi"> 饮料</span></a>
+					</li>
+					<li class="red-shine menu-categories__item menu-categories__item--active">
 						<a href="#" class=" menu-categories__link"><span
 								class="menu-categories__text-rus">Новинки</span><span
 								class="menu-categories__text-chi">新项目</span></a>
@@ -47,14 +53,7 @@
 								class="menu-categories__text-rus">Десерты</span><span
 								class="menu-categories__text-chi">甜品</span></a>
 					</li>
-					<li class="red-shine menu-categories__item">
-						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Закуски
-							</span><span class="menu-categories__text-chi">小吃 </span></a>
-					</li>
-					<li class="red-shine menu-categories__item">
-						<a href="#" class="menu-categories__link"><span class="menu-categories__text-rus">Напитки
-							</span><span class="menu-categories__text-chi"> 饮料</span></a>
-					</li>
+
 				</ul>
 			</div>
 			<ul class="section-menu__card-list">
